syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank {}

message Wallet {
    string id = 1;
    float balance = 2;
    string UserId = 3;
}

message GetWalletByIdRequest {
    string id = 1;
}

message CreateWalletRequest {
    string userId = 1;
    float balance = 2;
}

service WalletService {
    rpc CreateWallet(CreateWalletRequest) returns (Wallet) {}
    rpc GetWallets(GetWalletByIdRequest) returns (Wallet) {}
}